--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@supabase/supabase-js": "^2.76.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "fabric": "^6.7.1",
     "fuse.js": "^7.1.0",
     "lucide-react": "^0.546.0",
     "next": "15.5.6",
