--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev --turbopack",
-    "build": " next build",
+    "build": "pnpm dlx prisma generate && next build",
     "start": "next start",
     "lint": "eslint",
     "migrate": "pnpm dlx prisma generate &&  pnpm dlx prisma migrate dev"
