--- a/package.json
+++ b/package.json
@@ -5,10 +5,10 @@
   
   "scripts": {
     "dev": "next dev --turbopack",
-    "build": "prisma generate && next build",
+    "build": "pnpm dlx prisma generate && next build",
     "start": "next start",
     "lint": "eslint",
-    "migrate": "pnpm dlx prisma generate &&  pnpm dlx prisma migrate dev"
+    "migrate": "pnpm dlx prisma generate && env $(cat .env.local | xargs) pnpm dlx prisma migrate dev"
   },
   "prisma": {
     "schema": "src/db/schema.prisma"
