--- a/package.json
+++ b/package.json
@@ -5,10 +5,11 @@
   
   "scripts": {
     "dev": "next dev --turbopack",
+    "vercel-build": "prisma generate && prisma migrate deploy && next build",
     "build": "prisma generate && next build",
     "start": "next start",
     "lint": "eslint",
-    "migrate": "prisma generate && prisma migrate deploy",
+    "migrate": "prisma migrate deploy",
     "postinstall": "prisma generate"
   },
   "prisma": {
@@ -48,6 +49,7 @@
     "eslint-config-next": "15.5.6",
     "prettier": "^3.6.2",
     "prettier-plugin-tailwindcss": "^0.7.1",
+    "prisma": "6.18.0",
     "tailwindcss": "^4",
     "tw-animate-css": "^1.4.0",
     "typescript": "^5"
